# four_in_a_row

./: .coverage  .coveragerc  .gitignore  .vercelignore  BUILD_SUMMARY.md  CODE_CHANGES.md  DEPLOYMENT_SUMMARY.md  FAST_MODE_GUIDE.md  GUI_GUIDE.md  HOW_TO_RUN.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_COMPARISON.md  README.md  README_WEB.md  README_WINDOWS.md  RECOMMENDATIONS.md  REDIS_SETUP.md  RUNNING_TESTS.md  RUST_GENERATOR.md  SECURITY_AUDIT.md  SECURITY_FIXES.md  SUMMARY.md  TESTING_COMPLETE.md  TESTS_OPTIMIZED.md  TEST_QUICK_REFERENCE.md  TEST_RESULTS.md  TEST_STATUS.md  TEST_SUMMARY.md  VERCEL_DEPLOY.md  VERCEL_DEPLOYMENT.md  WINDOWS_BUILD.md  benchmark_numba.py  benchmark_rust_depth12.py  board.py  build_rust_vercel.sh  build_windows.bat  build_windows_exe.py  compare_performance.py  coverage.xml  debug_move17.py  (+59 more)
.github/workflows/: build-executables.yml  build-rust-wheels.yml  build.yml  tests.yml  vercel-deploy.yml
api/: index.py
four_in_a_row_rust/: Cargo.toml  README.md  pyproject.toml
four_in_a_row_rust/src/: lib.rs
opening_book_generator/: Cargo.toml  README.md  build.sh
opening_book_generator/src/: ai_engine.rs  main.rs
tests/: README.md  __init__.py  requirements-test.txt
tests/integration/: test_api.py  test_no_websocket.py
tests/system/: __init__.py  test_full_game.py
tests/unit/: test_ai_engine.py  test_board.py  test_web_server_logic.py
wheels/: four_in_a_row_rust-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  four_in_a_row_rust-0.1.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
