[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "four-in-a-row-rust"
version = "0.1.0"
description = "Fast Rust-based AI engine for Four-in-a-Row game"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
module-name = "four_in_a_row_rust"
