[package]
name = "opening_book_generator"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
rayon = "1.10"

[[bin]]
name = "opening_book_generator"
path = "src/main.rs"

[[bin]]
name = "ai_engine"
path = "src/ai_engine.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
